Fixed overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,7 @@ h5 {
 
 header {
     display: flex;
+		position: relative;
 }
 
 header .logo {
